--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/p5.js"></script>
+  
 </head>
-<body background="background.jpeg">
+<body background="background.jpeg"> 
 <center>
   	<h3 class="btn btn-warning heading">AI MUSIC WEB APP
 	    <br>
@@ -25,6 +27,8 @@
     <h3 class="btn btn-danger song_name">Song Name</h3>
     <br>
 	<br><br>
+
+  <button onclick="play();" class="btn btn-success play_button">Play</button>
 </center>
 
 <script src="main.js"></script>
